fix(text-field): update styles of input components to prevent overflow (#2433)
* fix: update styles of input components to prevent overflow and improve layout

* fix: adjust padding on the date picker input to prevent value overflowing

* chore: format

--- a/packages/components/src/components/date-picker/date-picker.css
+++ b/packages/components/src/components/date-picker/date-picker.css
@@ -47,8 +47,8 @@ duet-date-picker .duet-date__input {
   border: var(--telekom-line-weight-standard) solid
     var(--telekom-color-ui-border-standard);
   background-color: var(--telekom-color-ui-state-fill-standard);
-  padding: 1.125rem calc(2rem - var(--telekom-spacing-composition-space-01))
-    0.25rem calc(var(--spacing-x) - var(--telekom-spacing-composition-space-01));
+  padding: 1.125rem 3.5rem 0.25rem
+    calc(var(--spacing-x) - var(--telekom-spacing-composition-space-01));
   height: var(--telekom-spacing-composition-space-13);
   font: var(--telekom-text-style-body);
 }
@@ -134,7 +134,6 @@ duet-date-picker .duet-date__toggle:active scale-icon-content-calendar {
   top: 0;
   left: 0;
   color: var(--telekom-color-text-and-icon-additional);
-  display: flex;
   z-index: var(--z-index-label);
   position: absolute;
   transition: all var(--telekom-motion-duration-transition)
@@ -142,6 +141,11 @@ duet-date-picker .duet-date__toggle:active scale-icon-content-calendar {
   pointer-events: none;
   font: var(--telekom-text-style-ui);
   transform: translate(var(--telekom-spacing-composition-space-05), 0.875rem);
+
+  width: calc(100% - var(--telekom-spacing-composition-space-17));
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 duet-date-picker .duet-date__input::placeholder {
